added new-items page

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-
+<div class="wrapper">
+<div class="content">
 <header class="header">
 <div class="header__top">
         <div class="container">
@@ -97,6 +98,7 @@
 </div>
 </div>
 </header>
+</div>
 
 <section class="search" style='background-image: url(images/search-bg.jpg);'>
     <div class="container">
@@ -115,9 +117,9 @@
                     </button>
                 </form>
             </div>
-        </div>
-    </div>
+        </div> 
 </section>
+    .
 
 <section class="products">
     <div class="container-fluid">
@@ -984,7 +986,7 @@
         </div>
     </div>
 </footer>
-
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/libs.min.js"></script>
 <script src="js/main.js"></script>
